--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -8,6 +8,18 @@ body {
     background-color: #d9dcd6;
 }
 
+.float-left {
+    float: left;
+    margin-right: 25px;
+}
+
+.float-right {
+    float: right;
+    margin-left: 25px;
+}
+
+/* begin header styling */
+
 header {
     padding: 20px;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
@@ -28,7 +40,7 @@ header nav {
     padding-top: 15px;
     margin-right: 20px;
     float: right;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-family: 'Gill Sans', 'Gill Sans MT', 'Calibri', 'Trebuchet MS', sans-serif;
     font-size: 20px;
 }
 
@@ -50,6 +62,8 @@ p {
     font-size: 16px;
 }
 
+/* begin hero styling */
+
 .hero {
     height: 800px;
     width: 100%;
@@ -59,21 +73,7 @@ p {
     background-position: center;
 }
 
-.float-left {
-    float: left;
-    margin-right: 25px;
-}
-
-.float-right {
-    float: right;
-    margin-left: 25px;
-}
-
-.content {
-    width: 75%;
-    display: inline-block;
-    margin-left: 20px;
-}
+/* begin benefits styling */
 
 .benefits {
     margin-right: 20px;
@@ -134,6 +134,14 @@ p {
     max-width: 150px;
 }
 
+/* begin article content styling */
+
+.content {
+    width: 75%;
+    display: inline-block;
+    margin-left: 20px;
+}
+
 .search-engine-optimization {
     margin-bottom: 20px;
     padding: 50px;
@@ -187,6 +195,8 @@ p {
     margin-bottom: 20px;
     font-size: 36px;
 }
+
+/* begin footer styling */
 
 footer {
     padding: 30px;
