--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -18,6 +18,10 @@ body {
     margin-left: 25px;
 }
 
+p {
+    font-size: 16px;
+}
+
 /* begin header styling */
 
 header {
@@ -53,13 +57,9 @@ header nav ul li {
     margin-left: 25px;
 }
 
-a {
+header nav ul li a {
     color: #ffffff;
     text-decoration: none;
-}
-
-p {
-    font-size: 16px;
 }
 
 /* begin hero styling */
